@@ -1,3 +1,7 @@
+17 May 2004
+Applied a patch by Roman Yakovenko that makes the export of unnamed enums
+better. Thanks Roman!
+
 23 October 2003
 Fixed bug where a class would appear more than one in the generated code.
 
